BUGFIX: Some videos don't appear on mobile page at some resolutions on FF
Fix by not hiding the embed-container overflow.

Also make jquery import on mobile story page nonblocking by loading at
end of page rather than in head.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4859,7 +4859,7 @@ footer p img {
             position: relative;
             padding-bottom: 56.25%;
             height: 0;
-            overflow: hidden;
+            /*overflow: hidden;*/
             max-width: 100%;
         }
         
